[package]
name = "cargo-diff"
version = "0.1.0"
authors = ["Kirill Nikitin <locke23rus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
reqwest = { version = "~0.11.2", features = ["blocking"] }
flate2 = "1.0.20"
tar = "0.4.33"
rand = "0.8.3"
